# hello-rocket

./: Cargo.toml  README.md  Rocket.toml  docker-compose.yml
migrations/2020-05-30-235403_create_todo_table/: down.sql  up.sql
src/: main.rs  schema.rs
